# shhare-app

./: .gitignore  LICENCE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: animated-icon.tsx  app-sidebar.tsx  derived-key-preview.tsx  generate-keys-modal.tsx  index.ts  key-row.tsx  layout.tsx  titlebar.tsx  tooltip-button.tsx
src/contexts/: app-context.tsx
src/pages/: home-page.tsx  info-page.tsx  keys-page.tsx  notes-page.tsx  page-layout.tsx
